5.0.2-dev6: margin-left sub data align, momentum upgrade packages, fix alias modal alignment

--- a/src/components/profile-v2/scss/profile-view-v2.scss
+++ b/src/components/profile-v2/scss/profile-view-v2.scss
@@ -329,6 +329,7 @@ md-modal::part(modal-container) {
   right: unset;
   top: 6.75rem;
   left: 1rem;
+  justify-content: unset;
 }
 
 md-modal::part(modal-body) {
