--- a/src/components/timeline-v2/scss/timelineItemV2.scss
+++ b/src/components/timeline-v2/scss/timelineItemV2.scss
@@ -182,6 +182,7 @@
   column-gap: 3rem;
   margin: 1rem 0.5rem 0.5rem 1rem;
   grid-template-columns: auto 1fr;
+  margin-left: 9.125rem;
 
   .cell {
     vertical-align: top;
